[package]
name = "redis-curses"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = "5.101.0"
redis = { version = "*"}
chrono = "0.4.19"
rand = "0.8.4"
crossbeam = "0.8.1" 
log = "0.4.14"
crossbeam-channel = "0.5.1"
log4rs = "1.0.0"
